--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.8.30
 cffi==1.17.1
+click==8.1.7
 colorama==0.4.6
 distro==1.9.0
 fastapi==0.114.1
@@ -24,6 +25,7 @@ sniffio==1.3.1
 starlette==0.38.5
 tqdm==4.66.5
 typing_extensions==4.12.2
+uvicorn==0.30.6
 websocket==0.2.1
 zope.event==5.0
 zope.interface==7.0.3
