--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pydantic==2.9.1
 pydantic-settings==2.5.2
 pydantic_core==2.23.3
 python-dotenv==1.0.1
+python-multipart==0.0.9
 sniffio==1.3.1
 starlette==0.38.5
 tqdm==4.66.5
